unpackaged/main/default/objects/User/fields/Is_GVP_User__c.field-meta.xml
<CustomField>
    <fullName>Is_GVP_User__c</fullName>
    <description>Field to identify if this is a GVP managed package user. Do Not delete this as it is used in flows to assign GVP package license automatically</description>
    <inlineHelpText>Select Yes, if this is for a Mexico User who needs access to GreatVines Package/Mexico360 app</inlineHelpText>
    <label>Is GVP User?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>