unpackaged/main/default/objects/User/fields/Quality_Claim_Mobile_User__c.field-meta.xml
<CustomField>
    <fullName>Quality_Claim_Mobile_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for pilot group submitting quality claims from the Salesforce Mobile App</description>
    <inlineHelpText>Used for pilot group submitting quality claims from the Salesforce Mobile App</inlineHelpText>
    <label>Quality Claim Mobile User</label>
    <type>Checkbox</type>
</CustomField>