unpackaged/main/default/objects/User/fields/SAP_User_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_User_Name__c</fullName>
    <label>SAP User Name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>