unpackaged/main/default/objects/User/fields/Trainee__c.field-meta.xml
<CustomField>
    <fullName>Trainee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trainee</label>
    <type>Checkbox</type>
</CustomField>