unpackaged/main/default/objects/User/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <label>VIP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PTP/AP</fullName>
            </value>
            <value>
                <fullName>T&amp;E</fullName>
            </value>
            <value>
                <fullName>RTR</fullName>
            </value>
            <value>
                <fullName>GMDM</fullName>
            </value>
            <value>
                <fullName>GBS</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>OTC Billing</fullName>
                <label>Credit and Collections</label>
            </value>
            <value>
                <fullName>OTC</fullName>
                <isActive>false</isActive>
                <label>OTC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>