unpackaged/main/default/objects/User/listViews/Community_Vendor_Community_Users.listView-meta.xml
<ListView>
    <fullName>Community_Vendor_Community_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Access_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Vendor Community</value>
    </filters>
    <label>Community - Vendor Community Users</label>
    <language>en_US</language>
</ListView>